--- a/practical_session.ipynb
+++ b/practical_session.ipynb
@@ -26,6 +26,67 @@
     }
    },
    "source": [
+    "## Quick fix\n",
+    "\n",
+    "If you installed the package correctly, you still see that 2 tests fail:\n",
+    "\n",
+    "```\n",
+    "FAILED tests/simulation/test_benchmark_functions.py::test_input_vector_with_NaN_values - Failed: DID NOT RAISE <class 'ValueError'>\n",
+    "FAILED tests/simulation/test_benchmark_functions.py::test_input_vector_with_inf_values - Failed: DID NOT RAISE <class 'ValueError'>\n",
+    "```\n",
+    "\n",
+    "In order to fix this, do the following\n",
+    "\n",
+    "* Navigate to where you installed the `f3dasm` package\n",
+    "* Open the file `function.py` in the `./f3dasm/base` folder\n",
+    "* Navigate to line 82 to the `def __call__()` function\n",
+    "\n",
+    "You will see something like this:\n",
+    "\n",
+    "```\n",
+    " def __call__(self, input_x: np.ndarray or Data) -> np.ndarray or Data:\n",
+    "        \"\"\"Evaluate the objective function\n",
+    "        Args:\n",
+    "            input_x (np.ndarray | Data object): input to be evaluated\n",
+    "\n",
+    "        Returns:\n",
+    "            np.ndarray: output of the objective function\n",
+    "        \"\"\"\n",
+    "        # If the input is a Data object\n",
+    "        if isinstance(input_x, Data):\n",
+    "            x = _from_data_to_numpy_array_benchmarkfunction(data=input_x)\n",
+    "\n",
+    "        else:\n",
+    "            x = input_x\n",
+    "\n",
+    "        # x = self._from_input_to_scaled(x) <--- UNCOMMENT THIS!!\n",
+    "\n",
+    "        y = np.atleast_1d(self.f(x))\n",
+    "\n",
+    "        # add noise\n",
+    "        if self.noise not in [None, \"None\"]:\n",
+    "            y = self._add_noise(y)\n",
+    "\n",
+    "        # If the input is a Data object\n",
+    "        if isinstance(input_x, Data):\n",
+    "            input_x.add_output(y)\n",
+    "            # return input_x\n",
+    "\n",
+    "        return y\n",
+    "```\n",
+    "\n",
+    "* Uncomment the line `x = self._from_input_to_scaled(x)`\n",
+    "* Run the tests again; the error should be gone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "import the `f3dasm` package, and some other packages:"
    ]
   },
