--- a/practical_session.ipynb
+++ b/practical_session.ipynb
@@ -22,6 +22,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First, we download the solution to the exercises from GitHub in order to check your answers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q -cO - https://github.com/mpvanderschelling/F3DASM_practical/blob/main/exercise_best_sample.obj?raw=true > exercise_best_sample.obj\n",
+    "!wget -q -cO - https://github.com/mpvanderschelling/F3DASM_practical/blob/main/exercise_adam_optimization.obj?raw=true > exercise_adam_optimization.obj\n",
+    "!wget -q -cO - https://github.com/mpvanderschelling/F3DASM_practical/blob/main/exercise_pso_optimization.obj?raw=true > exercise_pso_optimization.obj\n",
+    "!wget -q -cO - https://github.com/mpvanderschelling/F3DASM_practical/blob/main/exercise_samples_lhs.obj?raw=true > exercise_samples_lhs.obj\n",
+    "!wget -q -cO - https://github.com/mpvanderschelling/F3DASM_practical/blob/main/exercise_samples_random.obj?raw=true > exercise_samples_random.obj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "import the `f3dasm` package:"
    ]
   },
