--- a/session3/practical_session.ipynb
+++ b/session3/practical_session.ipynb
@@ -293,7 +293,7 @@
     "* `/%year-%month-%day/%hour-%minute-%seconds/` locally\n",
     "* `$PBS_JOBID/` on the HPC\n",
     "\n",
-    "The output-data, `hydra` configurations (`/.hyra/`) and logfile (`main.log`) will be automatically put in this folder\n",
+    "The output-data, `hydra` configurations (`/.hydra/`) and logfile (`main.log`) will be automatically put in this folder\n",
     "\n",
     "This will look something like this:\n",
     "\n",
@@ -323,6 +323,23 @@
     "        └── data.obj\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`python3 main.py --config.sampling.sampler=LatinHyperCube`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
